--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.21.0",
     "formik": "^2.2.9",
     "framer": "^2.3.0",
+    "framer-motion": "^10.12.9",
     "motion": "^10.15.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
